styles/main.css
/* GLOBAL */

@font-face {
  font-family:  'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  src: url("/fonts/l_10646.woff") format("woff");
}

.no-js #loader { display: none;  }
.js #loader { display: block; position: absolute; left: 100px; top: 0; }
.se-pre-con {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
	background: url(../img/loader.gif) center no-repeat #fff;
}
  

html {
  font-family: 'Fira Sans', sans-serif;
  overflow-x: hidden;
}

a {
  text-decoration: none;
}

body {
  opacity: 1;
  transition: 0.7s opacity;
}

::selection {
  color: white;
  background-color: #0A7FFF;
}

::-moz-selection { /* Code for Firefox */
  color: white;
  background-color: #0A7FFF;
}


/* NAVIGATION */

  .mobile {
    display: none;
    position: absolute;
    width: 100%;
    top: 75px;
    z-index: 4;
  }
  .mobile div {
    display: none;
  }
  .mobile button {
    position: absolute;
    top: -50px;
    right: 20px;
    border: 0;
    text-indent: 200%;
    overflow: hidden;
    background: url("/img/burger.png") center no-repeat;
    border-radius: 3px;
    background-size: 80%;
    width: 30px;
    height: 30px;
    outline: none;
    transition: all 400ms ease;
  }
  .mobile button.expanded {
    transform: rotate(90deg);
    background-color: transparent;
    border: 0;
  }
  .mobile a {
    font-size: 24px;
    display: block;
    background-color: #0A7FFF;
    color: #fff;
    padding: 15px;
    border-bottom: 1px #fff solid;
    box-shadow: 0 20px 20px 0 rgba(0,0,0,0.4);
    transition: 1s ease-in-out;
  }
  a.nav-item {
    /* background: #262626; */
    text-align: center;
    padding: 23.25px 0;
    text-decoration: none;
    color: white;
    font-weight: bold;
    transition: .1s ease-in-out;
  }
  a.nav-item:hover
 
  {
    border-bottom: 4px solid #FAAF40;
    transition: .1s ease-in-out;
    /* background: #e7e7e7; */
  }
  .desktop {
    top: 13px;
    right: 12vw;
    position: absolute;
    display: flex;
    overflow: hidden;
    width: 100%;
    justify-content: flex-end;
  }

  .desktop a {
    box-sizing: border-box;
    margin-left: 30px;
    font-family: 'Fira Sans', sans-serif;
    font-weight: 600;
    font-size: 16px;
    color: #FFFFFF;
    letter-spacing: 0;
    text-align: center;
  }
  .desktop a:last-child {
    border-right: none;
  }
  article {
    padding: 0 30px 15px;
  }



  /* HERO */

  .hero {
    background-color: #0A7FFF;
    height: 85vh;
    border-radius: 0 0 0 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .logopack {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: absolute;
    top: 25px;
    left: 30px;
  }

  .logotype {
  opacity: 0.9;
  padding-left: 10px;
  font-size: 16px;
  font-weight: 800;
  color: #FFFFFF;
  text-align: center;
  letter-spacing: 0.4pt;
  }

.lead {
  font-family: 'Fira Sans', sans-serif;
  font-weight: 700;
  font-size: 48px;
  color: #FFFFFF;
  letter-spacing: 0;
  line-height: 52px;
  /* margin-top: 100px; */
    
}

.leadline {
  font-family: 'Fira Sans', sans-serif;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  letter-spacing: 0;
  margin-top: 15px;
}

  .underbtn {
  font-size: 11px;
  color: #FFFFFF;
  letter-spacing: 0;
  margin-top: 20px;
  }

  .mac-logo {
    font-family: "Lucida Grande";
  }

  /* buttons */
.btn-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 30px;
}


/* HERO: RATER */

aside {
 position: relative;
 display: flex;
 flex-direction: column;
 margin-left: 50px;
 /* margin-top: 100px; */
}

.rater-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.rater {
  z-index: 10;
}

.rating {
  -webkit-text-stroke: 3px white;
  font-family: 'Fira Sans', sans-serif;
  font-weight: 900;
  font-size: 180px;
  color: rgba(0,122,255,0.00);
  letter-spacing: 20px;
  text-align: right;
  /* margin-bottom:20px; */
  position: absolute;
  transition: .4s ease-in-out;
}


/* BOTTOM CHUNK */
.color-settings {
  display: flex;
  flex-direction: column; 
}

.color-input {
  width: 100px;
  height: 25px;
	background: #464646;
	border: 1px solid #222;
	box-shadow: 0 0 2px 0 rgba(0,0,0,0.20);
	border-radius: 30px;
	padding-top: 6px;
  padding-bottom: 6px;
  opacity: 0.95;
	/* Input Font */
  font-family: 'Fira Sans', sans-serif;
  font-weight: 700;
	font-size: 16px;
	color: #fff;
	text-transform: uppercase;
	letter-spacing: -0.08px;
	text-align: center;
}

.input-wrapper {
  position: relative;
  float: right;
}

input[type='range'] {
	-webkit-appearance: none;
  }
  
  .slider-input {

    appearance: none;
    border-radius: 3em;
    height: 3em;
    margin-right: 20px;
    width: 270px;
    /* border: 2px #fff solid;  */
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.25);
    background: linear-gradient(to right,  #000000 0%,#0A7FFF 50%,#ffffff 100%);
  }

  .slider-black {
    background: linear-gradient(to right,  #000000 0%, #ffffff 100%);
  }
  
  input:focus {
	outline: none;
  }

  input[type='range']::-webkit-slider-thumb {
    -webkit-appearance: none !important;
    /* background: white; */
    border: 2px white solid;
    border-radius: 100%;
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,.3);
    height: 3em;
    width: 3em;
    transition: all 250ms ease-in-out;
}

input[type='range']::webkit-slider-thumb:hover {
    transform: scale(1.05);
    box-shadow: 0px 0px 1px 0px rgba(0,0,0,.5);
  }

.color-background {
  padding-top: 70px;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
}

/* .color-foreground {
  padding-top: 30px;
} */

.dot-rating {
  position: absolute; 
  display: flex;
  /* left: -45px; */
  top: -20px;
  z-index: 1;
}

.dot-aligner {
  margin: -2px;
  left: -50px;
  top: -20px;
}
/* ... */

